Link fixed for services in nav and fixed section nav bar overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,8 +36,7 @@ h2 {
 }
 
 .section {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    padding-top: 4rem; /* prevent nav bar overlap */
 }
 
 /* Buttons */
